--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   
   body {
     overflow-x: hidden;
-    background-image: url('./images/main_bg.png');
+    background-image: url('https://avatars.mds.yandex.net/i?id=bf3b6f1f16fa91e1e317fed3579f100e_l-4576144-images-thumbs&n=13');
     background-size: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
